[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/TransitionMask.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menues/Buttons/Back.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Menues/Online/Host_Or_Join_Menu/Host_Or_Join_Menu.gd" type="Script" id=3]

[node name="Host_Or_Join_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -22.0
margin_right = 21.0
margin_bottom = 22.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_Button" type="Button" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
text = "Join"

[node name="Host_Button" type="Button" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 100.0
margin_bottom = 90.0
text = "Host"

[node name="Nick_Name" type="TextEdit" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 100.0
margin_bottom = 155.0
rect_min_size = Vector2( 100, 15 )

[node name="TransitionMask" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Back" parent="." instance=ExtResource( 2 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_bottom = 0.0
[connection signal="pressed" from="VBoxContainer/Join_Button" to="." method="_on_Join_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Host_Button" to="." method="_on_Host_Button_pressed"]
